--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -75,9 +75,9 @@
 		<!-- 默认匹配所有的请求 -->
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
-	<listener>
+	<!-- <listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
-	</listener>
+	</listener> -->
 	<!-- Encoding  -->
 	<filter>
 		<filter-name>encodingFilter</filter-name>
@@ -113,11 +113,13 @@
 		<servlet-name>DruidStatServlet</servlet-name>
 		<url-pattern>/sys/druid/*</url-pattern>
 	</servlet-mapping>
+	<!-- 拦截的请求 -->
 	<filter>
 		<filter-name>DruidWebStatFilter</filter-name>
 		<filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
 		<init-param>
 			<param-name>exclusions</param-name>
+			<!-- 过滤掉不需要拦截的 -->
 			<param-value>*.js,*.css,*.jpg,*.png,*.ico,*.gif,/sys/druid/*</param-value>
 		</init-param>
 	</filter>
